--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="woord-container"></div>
         <div id="keuzes" style="display: none;">
             <button onclick="kies('i')">i</button>
-            <button onclick="kies('Y')">Y</button>
+            <button onclick="kies('y')">y</button>
         </div>
         <div id="feedback"></div>
         <div id="fouten-lijst"></div>
