--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <div id="feedback"></div>
         <div id="fouten-lijst"></div>
+        <button id="exporteer-fouten" style="display:none;">Exporteer foutenlijst</button>
     </div>
 
     <script src="script.js"></script>
