--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <div id="feedback"></div>
         <div id="fouten-lijst"></div>
+        <button id="download-fouten" style="display:none;">Download foutenlijst als Excel</button>
     </div>
 
     <script src="script.js"></script>
