--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <div class="container">
         <h1>Vul in: I of Y?</h1>
 
-        <label for="bestand-upload">Upload je Excel-bestand:</label>
+        <label for="bestand-upload">Upload je Excel-bestand:</>
         <input type="file" id="bestand-upload" accept=".xlsx" />
 
         <div id="commentaar"></div>
         <div id="woord-container"></div>
 
         <div id="keuzes" style="display: none;">
-            <button onclick="k')">i</button>
+            <button onclick="kies('i')">i</button>
             <button onclick="kies('y')">y</button>
         </div>
 
         <div id="feedback"></div>
         <div id="fouten-lijst"></div>
         <button id="download-fouten" style="display:none;">Download foutenlijst als Excel</button>
-    </div>
+    </>
 
     <script src="script.js"></script>
 </body>
